Fix typo in `LandRegistryFees` label and use `isBlank` for validation in `LandRegistryFeesPage`.